--- a/wiki/Sprints.wiki
+++ b/wiki/Sprints.wiki
@@ -5,3 +5,14 @@ Casos de uso:   _-UC003_
 http://scrumy.com/brine23atriums
 
 --------------------------------
+
+
+*Sprint 2*
+
+Casos de uso:   _-UC001_, _-UC002_
+
+http://scrumy.com/vine98marquise
+
+
+
+--------------------------------
